# coding-agent-harness

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  AGENT_LOG.md  CODEX_MODE.md  Dockerfile  Makefile  PLAN.md  README.md  REFLECTION.md  REQUIREMENTS_CHECKLIST.md  SPEC.md  SPEC_PROCESS.md  harness.yaml.example  pyproject.toml  render.yaml
.github/workflows/: ci.yml
.opencode/agents/: ai4se-orchestrator.md
.opencode/commands/: ai4se-next.md  ai4se-start.md
demo/: __init__.py  run_demo.py
docs/assignment/: 要求1.md
docs/cold-start/: COLD_START_REPORT.md
docs/superpowers/plans/: 2026-07-15-deepseek-contract-webui-errors.md  2026-07-15-webui-live-integration.md
docs/superpowers/specs/: 2026-07-15-webui-live-integration-design.md
harness/: agent_loop.py  approval.py  cli.py  models.py  run_events.py
harness/config/: loader.py
harness/credentials/: __init__.py  manager.py
harness/feedback/: __init__.py  classifier.py  injector.py  parser.py  tracker.py
harness/governance/: __init__.py  command_guard.py  hitl.py  path_guard.py
harness/llm/: base.py  deepseek.py  mock.py
harness/memory/: __init__.py  retriever.py
harness/tools/: __init__.py  base.py  file_ops.py  shell.py
tests/: conftest.py
tests/fixtures/: all_passed.json  assertion_failure.json  empty_report.json  import_error.json  mixed_results.json  syntax_error.json  type_error.json
tests/mock/: __init__.py  test_agent_loop_mock.py  test_mechanism_demo.py
tests/smoke/: fresh_install_smoke.py
tests/unit/: test_agent_loop.py  test_approval_broker.py  test_classifier.py  test_cli.py  test_command_guard.py  test_config.py  test_credentials.py  test_distribution.py  test_file_ops.py  test_github_actions_ci.py  test_gitlab_ci.py  test_hitl.py  test_injector.py  test_llm_base.py  test_llm_deepseek.py  test_llm_mock.py  test_local_web_runner.py  test_memory.py  test_models.py  test_parser.py  test_path_guard.py  test_readme.py  test_render_deploy.py  test_run_events.py  test_shell.py  test_tool_registry.py  test_tracker.py  test_webui_app.py  test_webui_state.py
webui/: __init__.py  app.py  local_runner.py  state.py  websocket.py
webui/static/: app.js  index.html  style.css
