[project]
name = "coding-agent-harness"
version = "0.1.0"
description = "TDD-focused Coding Agent Harness"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pyyaml",
    "keyring",
    "fastapi",
    "uvicorn",
    "websockets",
    "pytest",
    "pytest-json-report",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
