[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent-harness"
version = "0.1.0"
description = "TDD-focused Coding Agent Harness"
readme = {text = "TDD-focused Coding Agent Harness.", content-type = "text/markdown"}
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pyyaml",
    "keyring",
    "fastapi",
    "uvicorn",
    "websockets",
    "pytest",
    "pytest-json-report",
    "ruff",
    "mypy",
]

[project.scripts]
harness = "harness.cli:main"

[tool.setuptools.packages.find]
include = ["harness*", "webui*", "demo*"]

[tool.setuptools.package-data]
webui = [
    "static/index.html",
    "static/app.js",
    "static/style.css",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
strict_equality = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
